add carousel announce

--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -122,7 +122,7 @@ twitter
 
 </style>
 
-<div id="owl-announcements" class="owl-carousel owl-theme" style="">
+<div id="owl-announcements" class="owl-carousel owl-theme" style="display:none;">
 
 
 
@@ -319,7 +319,7 @@ two us at mbar for&nbsp;<strong>Come As You Are</strong>, an anti-valentine’s 
 
 
 
-<div id="owl-announcements-mobile" class="owl-carousel owl-theme" style="">
+<div id="owl-announcements-mobile" class="owl-carousel owl-theme" style="display: none;">
 
 
 
