add carousel announce

--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -362,7 +362,7 @@ two us at mbar for&nbsp;<strong>Come As You Are</strong>, an anti-valentine’s 
 
 
 {% for timedAnnouncement in craft.entries.section('timedAnnouncements') %}
-<div class="announcements-mobile">
+<div class="announcements-mobile" style="display: none;">
 
 <!-- <button class="close-announcement">X</button> -->
 
