add carousel announce

--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -293,12 +293,12 @@ twitter
 
 
 
-<div id="owl-announcements-mobile" class="owl-carousel owl-theme" style="display: none;">
+<div id="owl-announcements-mobile" class="owl-carousel owl-theme" style="display: none;height:150px;">
 
 
 
 {% for timedAnnouncement in craft.entries.section('timedAnnouncements') %}
-<div class="item" style="height:100px;">
+<div class="item" style="height:150px;">
 <div class="announcements">
 <!-- <button class="close-announcement">X</button> -->
 
