--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -122,7 +122,7 @@ twitter
 
 </style>
 
-<div id="owl-announcements" class="owl-carousel owl-theme" style="display:none;">
+<div id="owl-announcements" class="owl-carousel owl-theme" style="">
 
 
 
@@ -293,7 +293,7 @@ twitter
 
 
 
-<div id="owl-announcements-mobile" class="owl-carousel owl-theme" style="display: none;height:150px;">
+<div id="owl-announcements-mobile" class="owl-carousel owl-theme" style="height:150px;">
 
 
 
