--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -127,7 +127,7 @@ twitter
 
 
 {% for timedAnnouncement in craft.entries.section('timedAnnouncements') %}
-<div class="item">
+<div class="item" style="height: 100px;">
 <div class="announcements">
 
 <!-- <button class="close-announcement">X</button> -->
