add carousel announce

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3642,6 +3642,7 @@ display: none;
     position: absolute !important;
     right: 4px !important;
     top: 0 !important;
+        margin-top: -22px !important;
 
 }
 
