--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -122,7 +122,7 @@ twitter
 
 </style>
 
-<div id="owl-announcements" class="owl-carousel owl-theme" style="display: none;">
+<div id="owl-announcements" class="owl-carousel owl-theme" style="display: none;height: 140px;background: rgb(255, 204, 62);">
 
 
 
