--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -263,6 +263,41 @@ twitter
 </section>
 <!-- end contact items -->
 
+
+
+<!-- contact items -->
+<section class="contact-items second-row" style="position:relative;display:none;">
+
+    
+    
+        <div class="contact-items-container wider">
+              
+            <div id="open-table-modal" class="contact-item" style="display:none;">
+                <div class="contact-item-text left">
+                <span href="https://resy.com/cities/sea/mbar" id="resyButton-w6cxoffp">_</span>
+                </div>
+                </div>
+            
+            <div class="contact-item" id="reservembarbutton">
+                <div class="contact-item-text left"><div class="added-item-res">reserve<br>online</div>
+                <span href="https://resy.com/cities/sea/mbar" id="resyButton-w6cxoffp">_</span>
+                </div>
+                </div>
+
+                <div class="contact-item on-the-end">
+                <div class="contact-item-text for-tel">
+                <a href="tel:+12064578287">206 457 8287</a>
+                </div>
+                </div>
+    </div>
+    </section>
+    <!-- end contact items -->
+
+
+
+
+
+
 <!-- schedule items -->
 <section class="schedule-items">
 <div class="schedule">
