--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -272,7 +272,7 @@ twitter
     
         <div class="contact-items-container wider">
               
-            <div id="open-table-modal" class="contact-item" style="display:none;">
+            <div id="open-table-modal" class="contact-item" style="">
                 <div class="contact-item-text left">
                 <span href="https://resy.com/cities/sea/mbar" id="resyButton-w6cxoffp">_</span>
                 </div>
