--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -272,22 +272,17 @@ twitter
     
         <div class="contact-items-container wider">
               
-            <div id="open-table-modal" class="contact-item" style="">
-                <div class="contact-item-text left">
-                <span href="https://resy.com/cities/sea/mbar" id="resyButton-w6cxoffp">_</span>
-                </div>
-                </div>
+            <div class="contact-item as-circle">
+               
+            </div>
+
             
-            <div class="contact-item" id="reservembarbutton">
-                <div class="contact-item-text left"><div class="added-item-res">reserve<br>online</div>
-                <span href="https://resy.com/cities/sea/mbar" id="resyButton-w6cxoffp">_</span>
-                </div>
+            <div class="contact-item as-circle">
+               
                 </div>
 
-                <div class="contact-item on-the-end">
-                <div class="contact-item-text for-tel">
-                <a href="tel:+12064578287">206 457 8287</a>
-                </div>
+                <div class="contact-item  as-circle on-the-end">
+            
                 </div>
     </div>
     </section>
