--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3765,9 +3765,15 @@ display: none;
 
   .contact-items-container.wider{
     margin: 0 auto;
-    width: 100%;
+    width: 96%;
+    margin-bottom: 20px;
     position: relative;
     margin-top: 0px;
+  }
+
+  .contact-item.as-circle{
+    width:120px;
+    height: 120px;
   }
   
 }
