--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -272,16 +272,16 @@ twitter
     
         <div class="contact-items-container wider">
               
-            <div class="contact-item as-circle">
+            <div id="link-1" class="contact-item as-circle">
                
             </div>
 
             
-            <div class="contact-item as-circle">
+            <div id="link-2" class="contact-item as-circle">
                
                 </div>
 
-                <div class="contact-item  as-circle on-the-end">
+                <div id="link-3" class="contact-item  as-circle on-the-end">
             
                 </div>
     </div>
