--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -131,5 +131,37 @@ $('#second-button').click(function(){
 </script>
 
 
+
+<script>
+
+	$('#link-1').click(function(){
+	
+		window.open("https://www.w3schools.com#1", "_blank");
+	
+	
+	});
+	
+
+	$('#link-2').click(function(){
+	
+	window.open("https://www.w3schools.com#2", "_blank");
+
+
+});
+
+
+$('#link-3').click(function(){
+	
+	window.open("https://www.w3schools.com#3", "_blank");
+
+
+});
+
+
+	</script>
+	
+
+
+
 </body>
 </html>
