--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3775,6 +3775,11 @@ display: none;
     position: relative;
     margin-top: 0px;
   }
+  
+}
+
+
+@media only screen and (max-width: 768px) {
 
   .contact-item.as-circle{
     width:120px;
