--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -134,28 +134,14 @@ $('#second-button').click(function(){
 
 <script>
 
-	$('#link-1').click(function(){
+	$('#link-1, #link-2, #link-3').click(function(){
 	
-		window.open("https://www.w3schools.com#1", "_blank");
+		window.open("https://www.sevenrooms.com/events/mbarseattle", "_blank");
 	
 	
 	});
 	
 
-	$('#link-2').click(function(){
-	
-	window.open("https://www.w3schools.com#2", "_blank");
-
-
-});
-
-
-$('#link-3').click(function(){
-	
-	window.open("https://www.w3schools.com#3", "_blank");
-
-
-});
 
 
 	</script>
