--- a/public/css/style.css
+++ b/public/css/style.css
@@ -275,7 +275,7 @@ float: none;
 
 
 .contact-item.as-circle:hover{
-  background-image: none !important;
+  /* background-image: none !important; */
   /* background-color: blue !important; */
 }
 
