--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -266,7 +266,7 @@ twitter
 
 
 <!-- contact items -->
-<section class="contact-items second-row" style="position:relative;display:none;">
+<section class="contact-items second-row" style="position:relative;">
 
     
     
