--- a/public/css/style.css
+++ b/public/css/style.css
@@ -279,6 +279,17 @@ float: none;
 
 
 
+.as-circle{
+
+  -webkit-transition: all 1s ease;
+  transition: all 1s ease;
+
+}
+.as-circle:hover{
+  -webkit-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+
 .contact-item.as-circle:hover{
   /* background-image: none !important; */
   /* background-color: blue !important; */
