--- a/public/css/style.css
+++ b/public/css/style.css
@@ -281,13 +281,13 @@ float: none;
 
 .as-circle{
 
-  -webkit-transition: all 1s ease;
-  transition: all 1s ease;
+  -webkit-transition: all .25s ease;
+  transition: all 25s ease;
 
 }
 .as-circle:hover{
-  -webkit-transform: rotate(180deg);
-  transform: rotate(180deg);
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 .contact-item.as-circle:hover{
