--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -134,12 +134,21 @@ $('#second-button').click(function(){
 
 <script>
 
-	$('#link-1, #link-2, #link-3').click(function(){
+	$('#link-2, #link-3').click(function(){
 	
 		window.open("https://www.sevenrooms.com/events/mbarseattle", "_blank");
 	
 	
 	});
+
+
+	$('#link-1').click(function(){
+	
+	window.open("https://mbarseattle.tripleseat.com/party_request/10175", "_blank");
+
+
+});
+
 	
 
 
