--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -103,7 +103,7 @@ SevenroomsWidget.init({
       type: 'reservations',
       defaultPartySize: 2,
       defaultTime: '7:00PM',
-
+      allVenues: ['mbarseattle','mamnoon'],
   })
 
 </script>
