--- a/craft/templates/1118.orig.index.html
+++ b/craft/templates/1118.orig.index.html
@@ -269,26 +269,25 @@ twitter
 <section class="contact-items second-row" style="position:relative;">
 
     <div style="display:none;">
-
+    
         <script src="https://api.tripleseat.com/v1/leads/ts_script.js?lead_form_id=10175&public_key=fa38cde99c9a8c2f46a97dd30b4174de73c774fc"></script><a id="tripleseat_link" href="https://www.tripleseat.com">Private Event Software powered by Tripleseat</a>
-
-
+    
+    
     </div>
-
+    
         <div class="contact-items-container wider">
-
-            <div id="link-1" class="contact-item as-circle three">
-
+              
+            <div id="link-1" class="contact-item as-circle two">
+               
             </div>
 
-          <!-- <div id="link-2" class="contact-item as-circle one"> wassef 11-18 -->
-         <div id="link-2" class="contact-item as-circle one">
-            <!-- <div id="link-1" class="contact-item as-circle one"> wassef 142020 -->
-
+            
+            <div id="link-2" class="contact-item as-circle one">
+               
                 </div>
-         <div id="link-3" class="contact-item  as-circle on-the-end three">
-            <!--    <div id="link-2" class="contact-item  as-circle on-the-end one"> wassef 142020 -->
 
+                <div id="link-3" class="contact-item  as-circle on-the-end three">
+            
                 </div>
     </div>
     </section>
