--- a/craft/templates/182020.index.html
+++ b/craft/templates/182020.index.html
@@ -277,16 +277,16 @@ twitter
 
         <div class="contact-items-container wider">
 
-            <div id="link-1" class="contact-item as-circle three">
+            <div id="link-1" class="contact-item as-circle one">
 
             </div>
 
           <!-- <div id="link-2" class="contact-item as-circle one"> wassef 11-18 -->
-         <div id="link-2" class="contact-item as-circle one">
+          <!--  <div id="link-3" class="contact-item as-circle three"> wassef 142020 -->
             <!-- <div id="link-1" class="contact-item as-circle one"> wassef 142020 -->
 
                 </div>
-         <div id="link-3" class="contact-item  as-circle on-the-end three">
+         <!--  <div id="link-3" class="contact-item  as-circle on-the-end three"> wassef 11-18 -->
             <!--    <div id="link-2" class="contact-item  as-circle on-the-end one"> wassef 142020 -->
 
                 </div>
