--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -276,16 +276,63 @@ twitter
     </div>
 
         <div class="contact-items-container wider">
-
-            <div id="link-1" class="contact-item as-circle three">
+<div style="width: 100%;text-align: center;font-family: AvenirLTStdthick;color: white;">Place an order for pickup:</div>
+            <div id="link-1" class="contact-item as-circle three" style="display:none;">
 
             </div>
 
           <!-- <div id="link-2" class="contact-item as-circle one"> wassef 11-18 -->
-         <div id="link-2" class="contact-item as-circle one">
+         <div id="link-2" class="contact-item as-circle one" style="display:none;">
             <!-- <div id="link-1" class="contact-item as-circle one"> wassef 142020 -->
 
                 </div>
+<style type="text/css">
+
+
+.TockWidgetWrapper .TockButtonWidgetContainer{    
+text-align: center !important;
+margin: 20px auto 0 !important;
+}
+
+.TockWidgetWrapper .TockButton-buttonContainer{
+    margin-top: 20px !important;
+}
+
+
+.TockWidgetWrapper .TockLogo-container,
+.TockLogo-container .TockButton-iconBlue{
+    display:none !important;
+}
+
+
+.TockWidgetWrapper .TockButton-blue{
+ /*   background-color: #c11637 !important;
+font-family: 'Quicksand, sans-serif' !important;*/
+color: #ffffff;
+
+}
+
+
+
+/*
+.TockWidgetWrapper .TockButton-blue:hover{
+    background-color: #86142a !important;
+}
+*/
+
+.TockWidgetWrapper .TockButtonWidgetContainer {
+    display: block !important;
+}
+
+
+ .TockWidgetWrapper .TockWidget-B2{
+    font-family: AvenirLTStdthick !important;
+    color: white !important;
+}
+
+
+</style>
+<div id="Tock_widget_container" data-tock-display-mode="Button" data-tock-color-mode="Blue" data-tock-locale="en-us" data-tock-timezone="America/Los_Angeles"></div>
          <div id="link-3" class="contact-item  as-circle on-the-end three">
             <!--    <div id="link-2" class="contact-item  as-circle on-the-end one"> wassef 142020 -->
 
