--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -22,6 +22,8 @@
 	{% includeCssFile "css/normalize.min.css" %}
 	{% includeCssFile "css/font.css" %}
 	{% includeCssFile "css/style.css" %}
+
+<script>    !function(t,o,c,k){if(!t.tock){var e=t.tock=function(){e.callMethod?    e.callMethod.apply(e,arguments):e.queue.push(arguments)};t._tock||(t._tock=e),    e.push=e,e.loaded=!0,e.version='1.0',e.queue=[];var f=o.createElement(c);f.async=!0,    f.src=k;var g=o.getElementsByTagName(c)[0];g.parentNode.insertBefore(f,g)}}(    window,document,'script','https://www.exploretock.com/tock.js');    tock('init', 'mbar');    </script>
 </head>
 <body id ="waypointschild" class="planecursor">
 	<div id="container">
