--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3872,3 +3872,14 @@ pointer-events: none;
 }
 
 }
+
+
+
+
+@media only screen and (max-width: 1370px){
+#nav ul li a {
+    padding: 15px;
+}
+}
+
+
