--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -217,10 +217,18 @@ twitter
         <div class="contact-item" id="reservembarbutton">
 <div class="contact-item-text left"><div class="added-item-res">reserve<br>online</div>
 
-<span href="https://resy.com/cities/sea/mbar" id="resyButton-w6cxoffp">_</span>
+<!-- <span href="https://resy.com/cities/sea/mbar" id="resyButton-w6cxoffp">_</span> -->
 
 </div>
 </div>
+
+<div class="contact-item" id="sr-waitlist-root" class="sr-sm sr-dark sr-#324654">
+    <div class="contact-item-text left"><div class="added-item-res">join<br>waitlist</div>
+    
+    <!-- <span href="https://resy.com/cities/sea/mbar" id="resyButton-w6cxoffp">_</span> -->
+    
+    </div>
+    </div>
 
 <div class="contact-item">
 <div class="contact-item-text for-tel">
@@ -244,7 +252,7 @@ twitter
     </div>
 
         <div class="contact-items-container wider">
-<div style="width: 100%;text-align: center;font-family: AvenirLTStdthick;color: white;">Place an order for pickup at Mamnoon:</div>
+<div style="width: 100%;text-align: center;font-family: AvenirLTStdthick;color: white;">place an order for pickup at mamnoon:</div>
 
 
 
@@ -309,6 +317,7 @@ color: #ffffff;
     text-decoration: none;
     width: 200px;
     margin: 18px auto 0;  
+    text-transform: lowercase;
 
 }
 
