--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -147,17 +147,22 @@ SevenroomsWidget.init({
 
 
 
+
+
+
+
+
+
+
 <script>
 SevenroomsWidget2.init({
     venueId: "mbarseattle",
     triggerId: "sr-waitlist-root", // id of the dom element that will trigger this widget
     type: "waitlist", // either 'waitlist' or 'reservations' or 'events'
-    styleButton: true, // true if you are using the SevenRooms button
+    styleButton: false, // true if you are using the SevenRooms button
     previewWaitTimes: false // true if you are using the SevenRooms button & previewing wait times
 })
 </script>
-
-
 
 
 
