--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -217,15 +217,11 @@ twitter
         <div class="contact-item" id="reservembarbutton">
 <div class="contact-item-text left"><div class="added-item-res">reserve<br>online</div>
 
-<!-- <span href="https://resy.com/cities/sea/mbar" id="resyButton-w6cxoffp">_</span> -->
-
 </div>
 </div>
 
-<div class="contact-item" id="sr-waitlist-root" class="sr-sm sr-dark sr-#324654">
+<div class="contact-item" id="sr-waitlist-root">
     <div class="contact-item-text left"><div class="added-item-res">join<br>waitlist</div>
-    
-    <!-- <span href="https://resy.com/cities/sea/mbar" id="resyButton-w6cxoffp">_</span> -->
     
     </div>
     </div>
