--- a/public/css/style.css
+++ b/public/css/style.css
@@ -279,6 +279,28 @@ padding-top: -100px;
 }
 
 
+
+
+/*close modal*/
+
+
+button[aria-label='close modal'], button[aria-label='close modal']:active, button[aria-label='close modal']:focus {
+  background-color: transparent !important;
+  background-image: url(../img/SVG/closeX.svg);
+  background-repeat: no-repeat;
+  width: 36px;
+  height: 36px;
+  color: transparent !important;
+  font-size: 0;
+  outline: none;
+  background-size: 60% !important;
+  background-position: center center;
+  font-size: 0 !important;
+  margin-top: 5px;
+}
+
+/*close modal*/
+
 /*.contact-item:hover .contact-item-text a,*/
 .contact-item:hover .contact-item-text span:before{
   color: #425960 !important;
