--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -52,6 +52,11 @@
 
 </head>
 <body id ="waypointschild" class="planecursor">
+
+<div class="hovers1">1</div>
+<div class="hovers2">2</div>
+<div class="hovers3">3</div>
+
 	<div id="container">
 		<main id="content" role="main">
 			{% block content %}
