--- a/public/css/style.css
+++ b/public/css/style.css
@@ -235,7 +235,7 @@ padding-top: -100px;
 
        display: inline-block;
        /* background-color: pink; */
-       margin-right: 10px;
+       margin-right: 30px;
 }
 
 
@@ -271,6 +271,23 @@ padding-top: -100px;
   background-image: url(../img/SVG/phone-hover.svg);
 }
 
+
+
+
+.hovers1{
+  background-image: url(../img/SVG/reserve-online-hover.svg);
+  display: none;
+}
+
+.hovers2{
+  background-image: url(../img/SVG/join-waitlist-hover.svg);
+  display: none;
+}
+
+.hovers3{
+  background-image: url(../img/SVG/phone-hover.svg);
+  display: none;
+}
 
 
 
@@ -3967,6 +3984,20 @@ pointer-events: none;
 .contact-item.as-circle.three{
     margin-top: 100px;
 }
+
+
+
+.contact-item{
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
+
+
+.schedule-items.top .schedule .hours{
+  width: 90%;
+  margin: 0 auto;
+}
+
 
 }
 
