--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -220,11 +220,11 @@ twitter
 </div>
 </div>
 
-<div class="contact-item" id="sr-waitlist-root">
+<!-- <div class="contact-item" id="sr-waitlist-root">
     <div class="contact-item-text left"><div class="added-item-res">join<br>waitlist</div>
     
     </div>
-    </div>
+    </div> -->
 
 <div class="contact-item">
 <div class="contact-item-text for-tel">
