--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -31,6 +31,11 @@
 
 <style type="text/css">
 
+
+#menu{
+display: none;
+}
+
 .schedule-items.top .schedule .hours p{
     width: 90%;
     margin-left: 5.5%;
