--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -207,7 +207,7 @@ twitter
 
 
 <!-- contact items -->
-<section class="contact-items"  style="position:relative;">
+<section class="contact-items">
 
 
     <div class="contact-items-container">
@@ -226,9 +226,10 @@ twitter
     </div>
     </div> -->
 
-<div class="contact-item">
+<div class="contact-item upserve-click" style="position:relative;opacity:.25;pointer-events: none;">
 <div class="contact-item-text for-tel">
-<a href="tel:+12064578287">206 457 8287</a>
+<!--<a href="tel:+12064578287">206 457 8287</a>-->
+<button class="upserve-olo-button upserve-olo-opener">upserve</button>
 </div>
 </div>
 </div>
@@ -238,7 +239,7 @@ twitter
 
 
 <!-- contact items -->
-<section class="contact-items second-row" style="position:relative;">
+<section class="contact-items second-row" style="position:relative;padding-top: 0;">
 
     <div style="display:none;">
 
@@ -247,8 +248,8 @@ twitter
 
     </div>
 
-        <div class="contact-items-container wider">
-<div style="width: 100%;text-align: center;font-family: AvenirLTStdthick;color: white;">place an order for pickup at mamnoon:</div>
+        <div class="contact-items-container wider" style="margin-top:0;">
+<div style="width: 100%;text-align: center;font-family: AvenirLTStdthick;color: white;line-height:28px;">call us at <a href="tel:+12064578287" style="color: #ffffff">(206) 457-8287</a><br><!--place an order for pickup at mamnoon:--></div>
 
 
 
@@ -323,7 +324,7 @@ color: #ffffff;
 </style>
 
 
-<div style="cursor:pointer;" id="mama-dummy-button" class="TockButton-buttonContainer"><div data-tock-reserve="true" class="TockButton-link"><div class="TockButton TockButton-blue"><span class="TockWidget-B2">Mama Family Meal</span></div></div></div>
+<div style="cursor:pointer;pointer-events:none;display:none;" id="mama-dummy-button" class="TockButton-buttonContainer"><div data-tock-reserve="true" class="TockButton-link"><div class="TockButton TockButton-blue"><span class="TockWidget-B2">Mama Family Meal</span></div></div></div>
 
 
     </section>
